# GRID

./: .agentignore  .commits.json  .cursorrules  .dockerignore  .env.editor.template  .env.example  .env.test  .env.test.example  .gitattributes  .gitignore  .gitignore.security  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  1  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_VALIDATION_REPORT.md  COGNITIVE_PRIVACY_SHIELD_ANALYSIS.md  CONTRIBUTING.md  Ctemprelease-logs.txt  DEPLOYMENT_STATUS.md  Fixing Test Failures and Deprecations.md  GRID_COMPREHENSIVE_REPORT_2026-02-23.md  LICENSE  METADATA.md  Makefile  Official Python.org Guidance on Virtual Environments.MD  PRIVACY_SHIELD_PLAN_VERIFICATION.md  README.md  SUBTRACTIVE_AUDIT_REPORT.md  alembic.ini  attack_results.json  authors_notes.md  authors_notes_visualization.md  bandit-report.json  chaos_out.txt  checkpoint.md  (+65 more)
.claude/: settings.json  settings.local.json  (+1 more)
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/: .gitignore  .pre-commit-config.yaml  New Text Document.txt  README.md  concurrent_streams_demo.py  monitoring_20260206.pcapng  parsed_coinbase_20260206.json  pyproject.toml  requirements.txt
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/.github/: dependabot.yml
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/coinbase/: __init__.py  agent_executor.py  agent_executor_types.py  agentic_system.py  app.py  cli.py  cognitive_engine.py  crypto.py  databricks_config.py  error_recovery.py  events.py  exceptions.py  learning_coordinator.py  logging_config.py  main.py  runtimebehavior.py  skill_generator.py  skills.py  tracer.py  version_scoring.py
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/config/: env.template
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/core security & cyberattacks/: CRITICAL_NOTE_Network_Breach_Analysis.md  event_log.contempo.md
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/databricks/: workflow_definition.yaml
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/diagrams/: architecture.md  data_flow.md
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/docs/: AGENTS.md  CODEBASE_AUDIT_REPORT.md  COINBASE_CONTEXT.md  DATABRICKS_API_FIX.md  DATABRICKS_CONFIG.md  DATABRICKS_DEPLOYMENT.md  DATABRICKS_FOUNDATION_CHECKLIST.md  DATABRICKS_QUICKSTART.md  DATABRICKS_SETUP.md  DEVELOPMENT_RULES.md  EVALUATION.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_SAFETY_LENS.md  PROGRESS.md  SKILLS_DEFINITION.md  STATUS.md  TODO.md  TODO_TREE.md  architecture_visuals.md  rules.md  workflow.md
archive/Storage/Selected-Dirs-Backup-20260206-175159/Coinbase/examples/: comprehensive_demo.py  comprehensive_example.py  comprehensive_security.py  databricks_basic_usage.py  databricks_integration.py  databricks_test.py  demo.py  portfolio_monitoring.py  portfolio_safety_lens_demo.py  quick_start.py  real_portfolio_analysis.py  trading_signals.py  usage_example.py
boundaries/: DIAGNOSTIC_RESOLUTION.md  README.md  Understand Branch Context.md  __init__.py  boundary.py  logger_ws.py  overwatch.py  preparedness.py  pyproject.toml  refusal.py  schema.py  server_ws.py
boundaries/config/: __init__.py  default_boundary_config.json
boundaries/examples/: __init__.py  preparedness_overwatch_demo.py
boundaries/provenance/: __init__.py  chain.py  record.py  signer.py  test_provenance.py  types.py
boundaries/tests/: __init__.py  test_boundary_engine.py  test_overwatch.py  test_preparedness.py  test_transition_gate.py
boundaries/transition_gate/: __init__.py  credential.py  envelope.py  fingerprint.py  gate_keeper.py  nonce.py
boundaries/transition_gate/contracts/: c-receiving-agent.contract.json  e-source-agent.contract.json  transition-gate-contract.template.json
safety/: .env.example  CHANGELOG.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  GUARDIAN_README.md  GUARDIAN_REPORT.md  README.md  SAFETY_ENFORCEMENT.md  SECURITY_REVIEW_2026_02.md  __init__.py  ai_workflow_safety.py  architecture_fixes_summary.md  config.py  content_safety_checker.py  context_safe_engine_manager.py  deploy.ps1  monitoring.py  phase1_summary.md  pyproject.toml  test_guardian.py  test_runtime_debug.py  test_verification.py
safety/api/: auth.py  main.py  middleware.py  observation_endpoints.py  privacy_endpoints.py  rate_limiter.py  security_headers.py
safety/audit/: db.py  models.py
safety/auth/: manager.py
safety/config/rules/: default.yaml
safety/detectors/: __init__.py  ml_detector.py  post_check.py  pre_check.py  pre_check_guardian.py
safety/escalation/: handler.py  notifier.py
safety/guardian/: __init__.py  engine.py  loader.py
safety/model/: client.py  sandbox.py
safety/observability/: canary.py  logging_setup.py  metrics.py  risk_score.py  runtime_observation.py  security_monitoring.py
safety/privacy/: __init__.py  detector.py  engine.py
safety/privacy/cache/: result_cache.py
safety/privacy/core/: engine.py  masking.py  presets.py  types.py
safety/privacy/integration/: collaborative.py  middleware.py
safety/privacy/observability/: metrics.py
safety/privacy/workers/: pool.py  worker.py
safety/rules/: defaults.yaml  engine.py  loader.py  manager.py  registry.json
safety/scripts/: commands.txt  load_blocklist.py  migrate.py  publish-pypi.md  run_batch.py  upload-pypi.ps1  verify_manager.py
safety/tests/: conftest.py  test_debug_parity.py
safety/tests/integration/: test_middleware_pipeline.py  test_privacy_api.py
safety/tests/redteam/: README.md  test_redteam_vectors.py
safety/tests/unit/: test_ai_workflow_safety.py  test_audit_models.py  test_auth.py  test_escalation.py  test_fair_play.py  test_guardian.py  test_manager.py  test_masking.py  test_middleware.py  test_per_user_safety_fixes.py  test_phase1.py  test_pre_check.py  test_privacy_detector.py  test_privacy_engine.py  test_safety_enhancements.py  test_sandbox.py  test_security_headers.py
safety/workers/: consumer.py  worker_utils.py
work/.templates/: .gitignore  README-template.md  README.md  pyproject.toml
(+4250 files in other folders)
