[project]
name = "workspace"
version = "1.0.0"
description = "GRID Workspace: Geometric Resonance Intelligence Driver"
authors = [{ name = "Irfan Kabir", email = "irfankabir02@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "docs/guides/workspace-readme.md"

dependencies = [
    # ── Core Framework ──────────────────────────────────────────────
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-core>=2.14.0",
    "annotated-types>=0.6.0",
    "annotated-doc>=0.0.2",
    "python-dotenv>=1.0.0",
    "click>=8.3.1",
    "jinja2>=3.1.0",
    "markupsafe>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "anyio>=4.0.0",
    "pyyaml>=6.0.0",
    # ── Data Science & ML ───────────────────────────────────────────
    "numpy>=1.24.0",
    "scikit-learn==1.8.0",
    "tiktoken>=0.12.0",
    "networkx>=3.0",
    "sentence-transformers>=5.2.0",
    "chromadb>=1.4.1",
    "ollama>=0.6.1",
    "huggingface-hub>=1.0",
    "rank-bm25>=0.2.2",
    # ── Database & Storage ──────────────────────────────────────────
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "aiosqlite>=0.19.0",
    # ── Task Queue & Background Processing ──────────────────────────
    "celery>=5.3.0",
    "schedule>=1.2.2",
    # ── Security & Authentication ───────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "detect-secrets>=1.4.0",
    # ── External Services ───────────────────────────────────────────
    "databricks-sql-connector>=4.2.4",
    "databricks-sdk>=0.40.0",
    "stripe>=7.0.0",
    "mcp[cli]>=1.25.0",
    # ── Document Ingestion ──────────────────────────────────────────
    "nbformat>=5.9.0",
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    # ── Logging & Observability ─────────────────────────────────────
    "structlog>=23.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp>=0.42.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-logging>=0.42b0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "setuptools<81",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
ai = ["mistralai>=0.1.0", "openai>=1.0.0"]
audio = ["openai-whisper>=20231117", "librosa>=0.10.1", "soundfile>=0.12.1"]
gpu = ["bitsandbytes>=0.41.0"]
boundaries = ["jsonschema", "websockets"]

[dependency-groups]
dev = [
    "hatch>=1.16.2",
    "hatchling>=1.28.0",
    "black>=25.12.0",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "asyncpg-stubs>=0.31.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.1.0",
]
audit = [
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Not used for PyPI publish. Publish grid-intelligence from work/GRID/ and grid-safety from safety/.
[tool.hatch.build.targets.wheel]
packages = []

# ── UV Configuration ────────────────────────────────────────────────

[tool.uv]
# Single workspace venv at root
python-preference = "managed"
cache-dir = ".uv-cache"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv.workspace]
members = [
    "work/GRID",
]

# ── Ruff (Linter) ──────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv/",
    "__pycache__/",
    "*.pyc",
    "archive/",
    "tmp/",
    ".git/",
    "*.egg-info/",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP"]
extend-ignore = [
    "B007",
    "B008",
    "B018",
    "B904",
    "E501",
    "E402",
    "E741",
    "W293",
    "UP035",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"__main__.py" = ["F401"]
"**/security/*.py" = ["B904", "F401"]
"**/routers/*.py" = ["B904", "F401"]
"**/demo*.py" = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["grid", "application", "cognitive", "tools", "boundaries", "safety", "security"]

# ── Black (Formatter) ──────────────────────────────────────────────

[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    \.venv
  | __pycache__
  | archive
  | tmp
  | \.git
)/
'''

# ── MyPy (Type Checker) ────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "work/GRID/src"

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "rank_bm25.*",
    "sklearn.*",
    "chromadb.*",
    "huggingface_hub.*",
    "networkx.*",
    "scipy.*",
    "numpy.*",
    "ollama.*",
    "prometheus_client.*",
    "databricks.*",
    "celery.*",
    "stripe.*",
    "bcrypt.*",
    "jose.*",
    "asyncpg.*",
    "sqlalchemy.*",
    "alembic.*",
    "yaml.*",
    "psutil.*",
    "google.cloud.*",
    "requests.*",
    "aiohttp.*",
    "mistralai.*",
    "watchdog.*",
    "structlog.*",
    "torch.*",
    "transformers.*",
    "datasets.*",
    "neo4j.*",
    "jsonschema.*",
    "websockets.*",
    "openai.*",
    "redis.*",
    "mcp.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# ── Pytest ──────────────────────────────────────────────────────────

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "work/GRID/src",
]
testpaths = [
    "tests",
    "work/GRID/tests",
    "safety/tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::DeprecationWarning:pydantic.*",
]
markers = [
    "scratch: Experimental tests (excluded from CI)",
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, cross-module)",
    "api: API endpoint tests",
    "critical: Critical path tests (must pass)",
    "flaky: Flaky tests (may fail intermittently)",
    "slow: Slow running tests (> 1 second)",
    "asyncio: Async tests",
    "safety: Safety enforcement tests",
    "redis: Tests requiring live Redis (skipped by default)",
]

# ── Coverage ────────────────────────────────────────────────────────

[tool.coverage.run]
source = [
    "work/GRID/src",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/archive/*",
]

[tool.coverage.report]
fail_under = 75
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "\\.\\.\\.",
]

# ── Bandit (Security Linter) ───────────────────────────────────────

[tool.bandit]
exclude_dirs = [".venv", "archive", "tmp", "tests"]
skips = ["B101"]  # Allow assert in non-test code (used for dev guards)
