[project]
name = "coinbase"
version = "0.1.0"
description = "Crypto-focused project with GRID agentic system"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.1",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.14",
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest-asyncio>=0.21.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
]
databricks = [
    "databricks-sdk>=0.82.0",
]

[project.scripts]
coinbase = "coinbase.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["coinbase*"]
exclude = ["diagrams*", "tests*", "examples*"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "black>=25.12.0",
    "mypy>=1.19.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
]
databricks = [
    "databricks-sdk>=0.82.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "W293"]  # Line too long, whitespace in docstrings

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Public API re-exports are intentional
"**/security/*.py" = ["F401"]  # Optional cryptography imports

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "databricks.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# addopts = "--cov=coinbase --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["coinbase"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
